<resources>
    <string name="app_name">Grocer Taxi</string>
    <string name="app_slogan">Delivering Happiness!</string>
    <string name="razorpay_key_id">rzp_live_TKJ8qCyCDVnT6Z</string>
    <string name="razorpay_key_secret">ncTsL9ClmTVA69K8T8vASj89</string>
    <string name="onboarding_title1">Need groceries?</string>
    <string name="onboarding_title2">Multiple stores</string>
    <string name="onboarding_title3">Add to cart!</string>
    <string name="onboarding_title4">Make your order!</string>
    <string name="onboarding_title5">Same-day delivery!</string>
    <string name="onboarding_description1">Search &amp; filter your need from a variety of items &amp; daily products available.</string>
    <string name="onboarding_description2">Search and order from a number of grocery stores available in your location.</string>
    <string name="onboarding_description3">Make a list of items according to your need &amp; choice by adding them to your cart.</string>
    <string name="onboarding_description4">Finish your order by adding address for delivery &amp; making a hassle-free payment.</string>
    <string name="onboarding_description5">Our delivery partners will make sure you don\'t have to wait for your order.</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="connection_error">Connection Error</string>
    <string name="something_s_not_right_please_check_nyour_internet_connection_and_try_again">Something\'s not right. Please check\nyour internet connection and try again.</string>
    <string name="retry">RETRY</string>
    <string name="welcome_to">Welcome to</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_to_existing_account">Login to existing account</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="mobile">Mobile*</string>
    <string name="create_password">Create password*</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="by_continuing_i_agree_to_this">By continuing, I agree to this&#160;</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send_otp">Send OTP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="verify_your_mobile">Verify your mobile</string>
    <string name="enter_below_the_one_time_password_nsent_to_91xxxxxxxxxx">Enter below the One Time Password\nsent to +91XXXXXXXXXX</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="get_started">Get started</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_or_mobile">Email or mobile*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_below_and_we_ll_send_nyou_a_password_reset_link_on_that">Enter your email below and we\'ll send\nyou a password reset link on that.</string>
    <string name="enter_your_email">Enter your email*</string>
    <string name="send_link">Send Link</string>
    <string name="hi_user">Hi, User</string>
    <string name="what_city_you_re_in">What city you\'re in?</string>
    <string name="search_your_city">Search your city</string>
    <string name="city_name">City Name</string>
    <string name="well_user">Well, User</string>
    <string name="where_in_city">Where in City?</string>
    <string name="search_your_locality">Search your locality</string>
    <string name="locality_name">Locality Name</string>
    <string name="locality_city">Locality, City</string>
    <string name="hey_user">Hey, User!</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="search_grocery_and_more">Search grocery and more</string>
    <string name="express_delivery">Express\nDelivery</string>
    <string name="pocket_friendly">Pocket\nFriendly</string>
    <string name="top_rated">Top\nRated</string>
    <string name="safety_secured">Safety\nSecured</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="view_all">View All</string>
    <string name="introductory_offers">Introductory Offers</string>
    <string name="free_home_delivery">Free Home\nDelivery</string>
    <string name="no_convenience_charges">No Convenience\nCharges</string>
    <string name="extra_10_off">Extra 10%\nOFF</string>
    <string name="safe_no_contact_delivery">Safe No-Contact Delivery</string>
    <string name="keep_yourself_saviour_safe_with_our_safe_delivery_program_equiped_with_social_distancing">Keep yourself saviour safe with our safe delivery program equiped with social distancing</string>
    <string name="learn_more">Learn More</string>
    <string name="top_rated_stores">Top rated stores</string>
    <string name="best_offers_in_fruits">Best offers in fruits</string>
    <string name="best_offers_in_vegetables">Best offers in vegetables</string>
    <string name="best_offers_in_food_grains">Best offers in food grains</string>
    <string name="best_offers_in_personal_care">Best offers in personal care</string>
    <string name="whoa_we_aren_t_servicing_this_location_yet_ntry_changing_location">Whoa! We aren\'t servicing this location yet.\nTry changing location.</string>
    <string name="change_location">Change Location</string>
    <string name="store_name">Store Name</string>
    <string name="open">Open</string>
    <string name="xx_off">XX% OFF</string>
    <string name="product_name">Product Name</string>
    <string name="product_unit">Product unit</string>
    <string name="xxx">₹ XXX</string>
    <string name="add">Add</string>
    <string name="categories">Categories</string>
    <string name="select_your_category">Select your category</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="food_grains">Food Grains</string>
    <string name="dairy_items">Dairy Items</string>
    <string name="bakery_items">Bakery Items</string>
    <string name="beverages">Beverages</string>
    <string name="dry_fruits">Dry Fruits</string>
    <string name="meat_bacon">Meat &amp; Bacon</string>
    <string name="noodles_pasta">Noodles &amp; Pasta</string>
    <string name="snacks">Snacks</string>
    <string name="kitchen_oil">Kitchen Oil</string>
    <string name="spices">Spices</string>
    <string name="sweets">Sweets</string>
    <string name="baby_care">Baby Care</string>
    <string name="household">Household</string>
    <string name="personal_care">Personal Care</string>
    <string name="pet_care">Pet Care</string>
    <string name="stationary">Stationary</string>
    <string name="hardware">Hardware</string>
    <string name="medical">Medical</string>
    <string name="sports">Sports</string>
    <string name="stores">Stores</string>
    <string name="search_store">Search store</string>
    <string name="no_stores_in_here">No stores in here</string>
    <string name="sample_address">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor - XXXXXX</string>
    <string name="store_s_open">Store\'s open</string>
    <string name="xx">XX</string>
    <string name="category">Category</string>
    <string name="sort_results_by">Sort results by</string>
    <string name="relevance">Relevance</string>
    <string name="newest_first">Newest First</string>
    <string name="name_a_z">Name : A-Z</string>
    <string name="name_z_a">Name : Z-A</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="open_stores_only">Open Stores Only</string>
    <string name="user_name">User Name</string>
    <string name="xxxxxxxxxxxxxx_xxxxx_xxx">xxxxxxxxxxxxxx@xxxxx.xxx</string>
    <string name="_91xxxxxxxxxx">+91XXXXXXXXXX</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="write_to_us">Write to us</string>
    <string name="rate_us_on_google_play">Rate us on Google Play</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="app_settings">App Settings</string>
    <string name="log_out">Log Out</string>
    <string name="all_products">All products</string>
    <string name="search_product">Search product</string>
    <string name="no_products_in_here">No products in here</string>
    <string name="x_items_xxx">X items | ₹ XXX</string>
    <string name="view_cart">View Cart</string>
    <string name="offer">Offer</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="exclude_out_of_stock">Exclude out of stock</string>
    <string name="category_">Category : </string>
    <string name="product_category">Product Category</string>
    <string name="in_stock">In Stock</string>
    <string name="x_unit_in_stock">(x unit in stock)</string>
    <string name="inclusive_of_all_taxes">(Inclusive of all taxes)</string>
    <string name="get_extra_10_off_use_promo_code_gtnew10">Get extra 10% OFF. Use promo code GTNEW10.</string>
    <string name="yay_free_delivery_for_you">Yay! FREE Delivery for you.</string>
    <string name="yay_no_convenience_fee_for_you">Yay! No convenience fee for you.</string>
    <string name="pay_on_delivery_available">Pay on Delivery available.</string>
    <string name="easy_exchange_return_amp_cancellation_policy"><![CDATA[Easy Exchange/Return & Cancellation Policy.]]></string>
    <string name="the_delivery_time_may_vary_based_on_the_availability_of_the_item">The delivery time may vary based on the availability of the item.</string>
    <string name="sold_by">Sold by : </string>
    <string name="abc_groceries">ABC Groceries</string>
    <string name="product_details">Product Details</string>
    <string name="description">Description</string>
    <string name="no_information">No information</string>
    <string name="brand">Brand</string>
    <string name="date_of_mfg">Date of MFG.</string>
    <string name="best_before">Best Before</string>
    <string name="similar_items">Similar Items</string>
    <string name="quality_products">Quality Products</string>
    <string name="contact_less_delivery">Contact-less Delivery</string>
    <string name="secure_payments">Secure Payments</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="start_typing_to_search">Start typing to search</string>
    <string name="search_any_product_here">Search any product here</string>
    <string name="no_matching_search_results">No matching search results</string>
    <string name="store_000000000000">STORE-000000000000</string>
    <string name="managed_by">Managed by</string>
    <string name="store_owner">Store Owner</string>
    <string name="address">Address</string>
    <string name="email_">Email</string>
    <string name="mobile_">Mobile</string>
    <string name="store_timing">Store Timing</string>
    <string name="_00_00_am_00_00_pm">00:00 AM - 00:00 PM</string>
    <string name="minimum_order_value">Minimum Order Value</string>
    <string name="rate_this_store">Rate this store</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>
    <string name="describe_your_experience_optional">Describe your experience (optional)</string>
</resources>