<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/click_listener"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:paddingBottom="16dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/store_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="8dp" />

    <TextView
        android:id="@+id/store_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/store_name"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store_image" />

    <TextView
        android:id="@+id/store_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:text="@string/sample_address"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store_name" />

    <TextView
        android:id="@+id/store_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/store_s_open"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/successColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store_address" />

    <TextView
        android:id="@+id/store_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/xx"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/store_rating_bar"
        app:layout_constraintEnd_toStartOf="@+id/store_rating_bar"
        app:layout_constraintTop_toTopOf="@id/store_rating_bar" />

    <per.wsj.library.AndRatingBar
        android:id="@+id/store_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="16dp"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.1"
        app:bgColor="@color/colorViews"
        app:bgDrawable="@drawable/ic_rate_inactive"
        app:layout_constraintBottom_toBottomOf="@id/store_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/store_status"
        app:starColor="@color/colorPrimary"
        app:starDrawable="@drawable/ic_rate_active"
        app:starSpacing="2dp"
        app:subStarColor="@color/colorViews" />

</androidx.constraintlayout.widget.ConstraintLayout>