<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SearchProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_product_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/action_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.5"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorIconDark" />

        <AutoCompleteTextView
            android:id="@+id/input_product_search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:dropDownAnchor="@id/input_product_search"
            android:fontFamily="@font/montserrat"
            android:hint="@string/start_typing_to_search"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:popupBackground="@color/colorSearch"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorInactive"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/action_btn"
            app:layout_constraintEnd_toStartOf="@+id/speech_to_text"
            app:layout_constraintStart_toEndOf="@id/action_btn"
            app:layout_constraintTop_toTopOf="@id/action_btn" />

        <ImageView
            android:id="@+id/speech_to_text"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="@id/action_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/action_btn"
            app:tint="@color/colorIconDark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="56dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_product_search" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="@id/recycler_products"
        app:layout_constraintEnd_toEndOf="@id/recycler_products"
        app:layout_constraintStart_toStartOf="@id/recycler_products"
        app:layout_constraintTop_toTopOf="@id/recycler_products">

        <ImageView
            android:id="@+id/illustration_search"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/illustration_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/search_any_product_here"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:alpha="0.75"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/illustration_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="@id/recycler_products"
        app:layout_constraintEnd_toEndOf="@id/recycler_products"
        app:layout_constraintStart_toStartOf="@id/recycler_products"
        app:layout_constraintTop_toTopOf="@id/recycler_products">

        <ImageView
            android:id="@+id/illustration_empty"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/illustration_empty1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/no_matching_search_results"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:alpha="0.75"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/illustration_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:visibility="gone"
        android:progressTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_products" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_no_internet"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/illustration_no_internet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_no_internet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/connection_error"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_no_internet" />

        <TextView
            android:id="@+id/text_no_internet_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:alpha="0.75"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/something_s_not_right_please_check_nyour_internet_connection_and_try_again"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_no_internet" />

        <androidx.cardview.widget.CardView
            android:id="@+id/retry_btn_container"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_no_internet_desc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/text_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:fontFamily="@font/montserrat"
                    android:includeFontPadding="false"
                    android:text="@string/retry"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>